<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            style="@style/KeyValuePairHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/KeyValuePairHolder.Key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pd_current_price" />

            <TextView
                android:id="@+id/tvCurrentPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            style="@style/KeyValuePairHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/KeyValuePairHolder.Key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pd_closing_price" />

            <TextView
                android:id="@+id/tvClosingPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            style="@style/KeyValuePairHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/KeyValuePairHolder.Key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pd_market_status" />

            <TextView
                android:id="@+id/tvMarketStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPassive" />

        <LinearLayout
            style="@style/KeyValuePairHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/KeyValuePairHolder.Key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pd_market_account_value" />

            <TextView
                android:id="@+id/tvAccountValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            style="@style/KeyValuePairHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/KeyValuePairHolder.Key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pd_market_performance" />

            <TextView
                android:id="@+id/tvPerformance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            style="@style/KeyValuePairHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/KeyValuePairHolder.Key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pd_market_suggest_funding" />

            <TextView
                android:id="@+id/tvSuggestFunding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

</android.support.design.widget.CoordinatorLayout>
